--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "web2blob",
-  "version": "0.0.3",
-  "description":
-    "Upload all your web assets to Azure Blob Storage with a simple command!",
+  "version": "0.0.4",
+  "description": "Upload all your web assets to Azure Blob Storage with a simple command!",
   "bin": "./bin/web2blob.js",
   "main": "./lib/api.js",
   "dependencies": {
-    "azure-storage": "2.8.1",
+    "azure-storage": "2.8.3",
     "bluebird": "3.5.1",
     "commander": "2.15.1",
     "mime-types": "2.1.18",
@@ -14,7 +13,7 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "jest": "^22.4.3"
+    "jest": "^22.4.4"
   },
   "scripts": {
     "lint": "eslint bin lib",
